day26-scalable-web-app/modules/ec2/main.tf
locals {
    common_tags = {
        Environment = var.environment
        ManagedBy = "Terraform"
        Project = "scalable-web-app"
    }
}

resource "aws_security_group" "instancesg" {
    name = " web-instance-sg-${var.environment}"
    description = "Allow HTTP/HTTPS inbound to EC2 instances"


    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

      ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

      egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
